twists for tests

--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "diabolocom-frontend-task",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "run-p type-check \"build-vue {@}\" \"build-wc {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
-    "build-only": "vite build",
+    "build-vue": "vite build",
+    "build-wc": "vite build -c vite.wc.config.js",
+    "preview-wc": "vite preview -c vite.wc.config.js",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
