--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-vue {@}\" \"build-wc {@}\" --",
+    "build": "npm run build-vue && npm run build-wc",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
     "build-vue": "vite build",
-    "build-wc": "vite build -c vite.wc.config.js",
+    "build-wc": "npm run build-tailwind && vite build -c vite.wc.config.js",
+    "build-tailwind": "tailwindcss build -i src/style.css -c ./tailwind.config.js -o src/tailwind.css --postcss",
     "preview-wc": "vite preview -c vite.wc.config.js",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -37,6 +38,7 @@
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.35",
     "prettier": "^3.0.3",
+    "rollup-plugin-copy": "^3.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
