--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build-wc && npm run build-vue",
+    "build": "npm run build-wc && npm run build-wc && npm run build-vue",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
