--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.17",
+    "canvas": "^2.11.2",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^24.0.0",
@@ -43,6 +44,7 @@
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vitest": "^1.2.2",
+    "vitest-axe": "^0.1.0",
     "vue-tsc": "^1.8.27"
   }
 }
